<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2013 Nordic Semiconductor. All Rights Reserved.
  
  The information contained herein is property of Nordic Semiconductor ASA.
  Terms and conditions of usage are described in detail in NORDIC SEMICONDUCTOR STANDARD SOFTWARE LICENSE AGREEMENT.
  Licensees are granted free, non-transferable use of the information. NO WARRANTY of ANY KIND is provided. 
  This heading must NOT be removed from the file.

-->
<resources>

    <string name="app_name">Emb_Pignew</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="Ping">ping</string>
    <string name="Locate">locate</string>
    <string name="ping">Ping</string>
    <string name="locate">Locate</string>
    <string name="device_info">Device Info</string>
    <string name="server_response">Server Response</string>
    <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>

    <string name="permission_log_label">read and write log</string>
    <string name="permission_log_description">Allows the app to write and read from Nordic Semiconductor Event log</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_disconnect">DISCONNECT</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_plugins">PLUGINS</string>
    <string name="drawer_plugin_mcp">nRF Master Control Panel</string>

    <string name="battery">%d%%</string>
    <string name="progress">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not has required services.</string>
    <string name="no_application">Web Borswer application is not available.</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle__not_bonded">AVAILABLE DEVICES:</string>

    <string name="bonding">Bonding with the device&#8230;</string>
    <string name="bonded">The device is now bonded.</string>

    <string name="about_title">About</string>
    <string name="about_version">\n\nVersion: %s</string>
    <string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>
    <string name="emb_pig">Emb_Pig</string>
    <string name="ld">ld</string>
    <string name="z9">z9</string>
    <string name="bu">bu</string>
    <string name="f6">f6</string>
    <string name="add_device_name">Add Device Name</string>
    <string name="ff">ff</string>
    <string name="title_sync">Sync</string>
    <string name="title_refresh">Refresh</string>

</resources>
