<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/devicename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:digits="ABCDEFGHIJKLMNOPQUVRSTWXYZabcdefghijklmnopquvrstwxyz1234567890"
            android:hint="@string/add_device_name"
            android:maxLength="7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/devicename"
            android:layout_marginTop="27dp"
            android:weightSum="8.5">

            <EditText
                android:id="@+id/deviceaddress1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:digits="ABCDEFabcdef1234567890:"
                android:hint="@string/f6"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLength="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text=":" />

            <EditText
                android:id="@+id/deviceaddress2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:digits="ABCDEFabcdef1234567890:"
                android:hint="@string/bu"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLength="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text=":" />

            <EditText
                android:id="@+id/deviceaddress3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:digits="ABCDEFabcdef1234567890:"
                android:hint="@string/z9"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLength="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text=":" />

            <EditText
                android:id="@+id/deviceaddress4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:digits="ABCDEFabcdef1234567890:"
                android:hint="@string/ld"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLength="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text=":" />

            <EditText
                android:id="@+id/deviceaddress5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:digits="ABCDEFabcdef1234567890:"
                android:hint="p0"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLength="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text=":" />

            <EditText
                android:id="@+id/deviceaddress6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:layout_gravity="center"
                android:gravity="center"
                android:digits="ABCDEFabcdef1234567890:"
                android:hint="@string/ff"
                android:maxLength="2" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
